--- a/css/forms.css
+++ b/css/forms.css
@@ -57,6 +57,10 @@ input:focus::placeholder {
   width: 100%;
   height: 100%;
   background-color: var(--color-modal-overlay);
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .order-modal.is-hidden {
@@ -266,6 +270,7 @@ input[type='checkbox']:checked
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-bottom: 16px;
 }
 .e-mail-input {
   width: 264px;
@@ -279,8 +284,7 @@ input[type='checkbox']:checked
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.48px;
-  margin-top: 16px;
-}
+  }
 .subscribe-button {
   display: flex;
   align-items: center;
