--- a/css/forms.css
+++ b/css/forms.css
@@ -259,7 +259,9 @@ input[type='checkbox']:checked
   align-items: flex-start;
   gap: 24px;
 }
-
+.footer-subscribe-form input::placeholder{
+    color: var(--color-white-background);
+}
 .subscribe-label {
   color: var(--color-white-background);
   font-family: inherit;
@@ -279,13 +281,14 @@ input[type='checkbox']:checked
   border: 1px solid var(--color-white-background);
   background-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--WHITE);
-  font-family: inherit;
+  color: var(--color-white-background);
+    font-family: inherit;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
   padding-left: 16px;
   }
+  
 .subscribe-button {
   display: flex;
   align-items: center;
@@ -298,6 +301,14 @@ input[type='checkbox']:checked
   border: none;
   min-width: 165px;
   height: 40px;
+   color: var(--color-white-background);
+  text-align: center;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
 }
 
 .subscribe-button:hover,
@@ -307,7 +318,7 @@ input[type='checkbox']:checked
   transition: var(--trans);
 }
 
-.subscribe-button-text {
+/* .subscribe-button-text {
   color: var(--color-white-background);
   text-align: center;
   font-family: inherit;
@@ -315,7 +326,7 @@ input[type='checkbox']:checked
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-}
+} */
 
 .subscribe-icon {
   fill: var(--color-white-background);
