--- a/css/forms.css
+++ b/css/forms.css
@@ -100,7 +100,12 @@ input:focus::placeholder {
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button:hover,
+.modal-button:hover {
+  fill: var(--color-white-background);
+  background-color: var(--color-pressed-states);
+  border: none;
+  
+}
 .modal-button:focus {
   fill: var(--color-white-background);
   background-color: var(--color-pressed-states);
@@ -261,5 +266,5 @@ input[type='checkbox']:checked
 .order-modal-button-send:focus {
   color: var(--color-white-background);
   background-color: var(--color-pressed-states);
-  transition: var(--trans);
+  
 }
