--- a/css/forms.css
+++ b/css/forms.css
@@ -177,19 +177,21 @@ input:focus::placeholder {
 }
 
 .input-textarea {
-  color: var(--color-hero-background);
-  width: 360px;
+  color: rgba(46, 47, 66, 0.4);
+  width: 100%;
   height: 120px;
   padding: 8px 16px;
   font-family: inherit;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.48px;
   display: block;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
   outline: transparent;
+  background-color: transparent; 
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-textarea:hover,
 .input-textarea:focus {
