--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ img {
 }
 .section-features {
   background-color: var(--color-white-background);
-  padding-top: 120px 0;
+  padding: 120px 0;
 }
 .features-container {
   display: flex;
@@ -484,8 +484,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
   width: 264px;
-  margin-top: 16px;
-}
+  }
 .text-social-footer {
   color: var(--color-white-background);
   font-family: inherit;
