--- a/css/forms.css
+++ b/css/forms.css
@@ -101,16 +101,15 @@ input:focus::placeholder {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .modal-button:hover {
-  fill: var(--color-white-background);
-  background-color: var(--color-pressed-states);
-  border: none;
-} */
 .modal-button:hover,
 .modal-button:focus {
-  fill: var(--color-white-background);
-  background-color: var(--color-pressed-states);
+  background-color: var(--color-pressed-states); 
   border: none;
+}
+
+.modal-button:hover .modal-button-icon,
+.modal-button:focus .modal-button-icon {
+  fill: var(--color-white-background); 
 }
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -231,15 +230,18 @@ input:focus::placeholder {
     transform: scale(1);
   }
 
-input[type='checkbox']:checked
-  + .agreement-label-checkbox
-  > .agreement-checkbox {
-  border-color: transparent;
-  background-color: var(--color-pressed-states);
-  fill: var(--color-light);
-  /* transform: scale(1); */
+input[type='checkbox']:checked + .agreement-label-checkbox > .agreement-checkbox {
+  background-color: var(--color-pressed-states); 
   border: none;
+  fill: var(--color-light); 
 }
+input[type='checkbox']:checked 
+  + .agreement-label-checkbox 
+  > .agreement-checkbox 
+  > .order-modal-icon-checkbox {
+  fill: var(--color-light); 
+}
+
 
 .agreement-link {
   color: var(--color-primary-brand);
