--- a/css/forms.css
+++ b/css/forms.css
@@ -96,11 +96,12 @@ input:focus::placeholder {
   justify-content: center;
   padding: 0;
   color: var(--color-hero-background);
-  background-color: var(--color-accent);
+  background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-button:hover,
 .modal-button:focus {
   background-color: var(--color-pressed-states); 
@@ -112,6 +113,11 @@ input:focus::placeholder {
   fill: var(--color-white-background); 
 }
 .modal-button-icon {
+    stroke: #111111;
+
+  border-radius: 100%;
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-title {
@@ -230,17 +236,17 @@ input:focus::placeholder {
     transform: scale(1);
   }
 
-input[type='checkbox']:checked + .agreement-label-checkbox > .agreement-checkbox {
+input[type='checkbox']:checked + .agreement-label-checkbox .agreement-checkbox {
   background-color: var(--color-pressed-states); 
   border: none;
   fill: var(--color-light); 
 }
-input[type='checkbox']:checked 
+/* input[type='checkbox']:checked 
   + .agreement-label-checkbox 
   > .agreement-checkbox 
   > .order-modal-icon-checkbox {
   fill: var(--color-light); 
-}
+} */
 
 
 .agreement-link {
