--- a/css/forms.css
+++ b/css/forms.css
@@ -96,7 +96,7 @@ input:focus::placeholder {
   justify-content: center;
   padding: 0;
   color: var(--color-hero-background);
-  background-color: transparent;
+  background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -106,20 +106,22 @@ input:focus::placeholder {
 .modal-button:focus {
   background-color: var(--color-pressed-states); 
   border: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--color-white-background); 
 }
 
-.modal-button:hover .modal-button-icon,
+/* .modal-button:hover .modal-button-icon,
 .modal-button:focus .modal-button-icon {
   fill: var(--color-white-background); 
 }
 .modal-button-icon {
-    stroke: #111111;
+stroke: #111111;
 
   border-radius: 100%;
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .modal-title {
   color: var(--color-hero-background);
   font-family: inherit;
