autochech-fixing-modal-11

--- a/css/forms.css
+++ b/css/forms.css
@@ -102,26 +102,22 @@ input:focus::placeholder {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button:hover,
+/* .modal-button:hover,
 .modal-button:focus {
-  background-color: var(--color-pressed-states); 
+  background-color: var(--color-pressed-states);
   border: none;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--color-white-background); 
-}
+    fill: var(--color-white-background);
+} */
 
-/* .modal-button:hover .modal-button-icon,
+.modal-button:hover .modal-button-icon,
 .modal-button:focus .modal-button-icon {
-  fill: var(--color-white-background); 
+  background-color: var(--color-pressed-states);
+  border: none;
+  fill: var(--color-white-background);
 }
 .modal-button-icon {
-stroke: #111111;
-
-  border-radius: 100%;
-  stroke-width: 1px;
-  stroke: rgba(0, 0, 0, 0.1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 .modal-title {
   color: var(--color-hero-background);
   font-family: inherit;
@@ -198,7 +194,7 @@ stroke: #111111;
   border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
   outline: transparent;
-  background-color: transparent; 
+  background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-textarea:hover,
@@ -232,24 +228,24 @@ stroke: #111111;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: transparent;
-}
-.order-modal-icon-checkbox {
-    transform: scale(1);
   }
+.order-modal-icon-checkbox {
+  fill: transparent;
+  transform: scale(1);
+}
 
 input[type='checkbox']:checked + .agreement-label-checkbox .agreement-checkbox {
-  background-color: var(--color-pressed-states); 
+  background-color: var(--color-pressed-states);
   border: none;
-  fill: var(--color-light); 
+  fill: var(--color-light);
+  transform: scale(1);
 }
-/* input[type='checkbox']:checked 
+input[type='checkbox']:checked 
   + .agreement-label-checkbox 
   > .agreement-checkbox 
   > .order-modal-icon-checkbox {
   fill: var(--color-light); 
-} */
-
+}
 
 .agreement-link {
   color: var(--color-primary-brand);
