--- a/css/forms.css
+++ b/css/forms.css
@@ -11,9 +11,8 @@
   --color-hero-background: #2e2f42;
   --color-modal-background: #fcfcfc;
   --color-success: #31d0aa;
-  --trans: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --trans: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 body {
@@ -38,7 +37,7 @@ button {
   padding: 0;
 }
 input::placeholder {
-  color: var(--WHITE);
+  color: va(--color-white-background);
   font-family: inherit;
   font-size: 12px;
   line-height: 2;
@@ -98,23 +97,25 @@ input:focus::placeholder {
   color: var(--color-hero-background);
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
-/* .modal-button:hover,
+.modal-button:hover,
 .modal-button:focus {
   background-color: var(--color-pressed-states);
   border: none;
-    fill: var(--color-white-background);
-} */
-
-.modal-button:hover .modal-button-icon,
-.modal-button:focus .modal-button-icon {
-  background-color: var(--color-pressed-states);
-  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--color-white-background);
 }
+
+/* .modal-button:hover .modal-button-icon,
+.modal-button:focus .modal-button-icon {
+    background-color: var(--color-pressed-states);
+  border: none;
+  
+  fill: var(--color-white-background);
+} */
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -170,8 +171,7 @@ input:focus::placeholder {
   background-color: var(--color-white-background);
   border-color: var(--color-primary-brand);
   border: 1px solid var(--color-primary-brand);
-  transition: var(--trans);
-}
+ }
 .input-form:hover + .order-modal-icon,
 .input-form:focus + .order-modal-icon {
   fill: var(--color-primary-brand);
@@ -228,9 +228,9 @@ input:focus::placeholder {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-.order-modal-icon-checkbox {
   fill: transparent;
+}
+.order-modal-icon-checkbox {
   transform: scale(1);
 }
 
@@ -238,14 +238,13 @@ input[type='checkbox']:checked + .agreement-label-checkbox .agreement-checkbox {
   background-color: var(--color-pressed-states);
   border: none;
   fill: var(--color-light);
-  transform: scale(1);
 }
-input[type='checkbox']:checked 
+/* input[type='checkbox']:checked 
   + .agreement-label-checkbox 
   > .agreement-checkbox 
   > .order-modal-icon-checkbox {
   fill: var(--color-light); 
-}
+} */
 
 .agreement-link {
   color: var(--color-primary-brand);
