--- a/css/forms.css
+++ b/css/forms.css
@@ -103,14 +103,14 @@ input:focus::placeholder {
 
 .modal-button:hover,
 .modal-button:focus {
-  background-color: var(--color-pressed-states);
+  background-color: #404bbf;
   border: none;
  }
  
 .modal-button:hover .modal-button-icon,
 .modal-button:focus .modal-button-icon {
-  fill: var(--color-white-background);
-}
+  fill: #ffffff
+} 
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
