--- a/css/forms.css
+++ b/css/forms.css
@@ -229,7 +229,7 @@ input:focus::placeholder {
   transform: scale(1);
 }
 
-input[type='checkbox']:checked + .agreement-label-checkbox .agreement-checkbox {
+input[type='checkbox']:checked + label > span {
   background-color: var(--color-pressed-states);
   border: none;
   fill: var(--color-light);
