--- a/css/forms.css
+++ b/css/forms.css
@@ -202,13 +202,34 @@ input:focus::placeholder {
 .order-form-agreement {
   margin-bottom: 24px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  border: 0;
+}
 
-.agreement-label-checkbox {
+/* .agreement-label-checkbox {
   color: var(--color-subtle-text);
   font-family: inherit;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.48px;
+} */
+
+.agreement-label-checkbox {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--color-subtle-text);
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 .agreement-checkbox {
   display: inline-flex;
@@ -225,11 +246,11 @@ input:focus::placeholder {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
 }
-.order-modal-icon-checkbox {
+/* .order-modal-icon-checkbox {
   transform: scale(1);
-}
+} */
 
-input[type='checkbox']:checked + label > span {
+input[type='checkbox']:checked + .agreement-label-checkbox .agreement-checkbox {
   background-color: var(--color-pressed-states);
   border: none;
   fill: var(--color-light);
