--- a/css/forms.css
+++ b/css/forms.css
@@ -137,14 +137,6 @@ input:focus::placeholder {
 
 .order-modal-label {
   display: block;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 4px;
-  padding: 11px 24px 11px 38px;
-  outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  background-color: transparent;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -157,8 +149,7 @@ input:focus::placeholder {
 .input-form {
   width: 100%;
   height: 40px;
-  padding-left: 38px;
-  border-radius: 4px;
+   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
   outline: transparent;
@@ -187,7 +178,6 @@ input:focus::placeholder {
   color: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 120px;
-  padding: 8px 16px;
   font-family: inherit;
   font-size: 12px;
   line-height: 1.17;
@@ -206,9 +196,10 @@ input:focus::placeholder {
 
 }
 
-.input-textarea::placeholder {
+textarea::placeholder {
 color: rgba(46, 47, 66, 0.4);
 }
+
 .order-form-agreement {
   margin-bottom: 24px;
 }
